--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,4 +25,190 @@ html{
      background-color: #ffffff;
      font-size: 18px;
  }
- 
+
+ nav{
+    display: flex;
+    justify-content: space-between;
+    height: 70px;
+    padding: 1rem 1.5rem;  
+    align-items: center;
+    text-align: center;
+}
+
+input#menu-hamburguesa{
+    height: 24px;
+    width: 24px;
+    visibility: hidden;
+    border-radius: 50%;
+    background-color: #f26440;
+}
+
+input#menu-hamburguesa~ul{
+    position: absolute;
+    list-style: none;
+    width: 100%;
+    left: 0;
+    height: calc(100vh - 55px);
+    top: 50px;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem 1rem;
+    display: none;
+}
+
+
+input#menu-hamburguesa:checked ~ ul{
+    display: flex;
+   /* right: 0;*/
+}
+
+nav > ul > li > a{
+    text-decoration: none;
+    transition: border-bottom .5s linear;
+    color: black;
+    padding: .5rem 1rem;
+    border-bottom: 2px solid transparent;
+    margin: bottom 2px; 
+}
+
+nav > ul > li > a:hover{
+    border-bottom: 2px solid #286f6c;
+}
+
+.letras-home{
+    color: #286f6c;
+    font-weight: bold;
+}
+header > h1{
+    font-size: 50px ;
+    font-weight: 600; /*es el semibold*/
+}
+
+.logos{
+    height: 24px;
+    width: 24px;
+    background-color: #f26440;
+    border-radius: 50%;
+    border-color: #ffffff;
+    border-style: solid;
+}
+.circulo1{
+    display: flex;
+        width: 450px;px;
+        height: 450px;
+        border: 1px solid black;
+        border-radius: 50%;
+        background-color: #286f6c;
+        border-color: #286f6c;
+}
+
+body > h2{
+    color: #286f6c;
+    font-size: 32px;
+    font-weight: 600; /*es el semibold*/
+}
+
+body > p{
+color: #adadad;
+font-size: 20px;
+}
+
+.circulo2,
+.circulo4{
+    display: flex;
+    width: 370px;px;
+    height: 370px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-color: #286f6c;
+    border-color: #286f6c;
+}
+
+.circulo3{
+    display: flex;
+    width: 180px;
+    height: 180px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-color: #f26440;
+    border-color: #f26440;
+}
+
+.fondo-verde{
+    background-color: #286f6c;
+    color: #ffffff;
+    font-size: 21.5px;
+    font-weight: 600; /*es el semibold*/
+}
+
+.fondo-verde > div{
+font-size: 20px;
+}
+
+.circulo4{
+    background-color:  #d4e1e2;
+    border-color:  #d4e1e2;
+}
+
+.logos-grandes{
+    height: 40px;
+    width: 40px;
+    background-color: #f26440;
+    border-radius: 50%;
+    border-color: #ffffff;
+    border-style: solid;
+}
+
+.titulos-verdes{
+    font-size: 14px;
+    color: #286f6c;
+    font-weight: bold;
+}
+
+.letras-grises{
+    font-size: 14px;
+    color: #adadad
+}
+
+footer{
+    color:#f26440;
+    text-align: center;
+    font-size: 14px;
+    font-weight: normal;
+}
+
+
+
+
+
+
+@media screen and ( min-width:600px ) {
+    label{
+        display: none;
+    }
+
+    input#menu-hamburguesa ~ ul{
+        position: static;
+        background-color: transparent;
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        justify-content: flex-end;
+        list-style: none;
+        margin-left: 1rem;
+        padding: 1.5rem 1rem;
+    }
+
+    nav > ul > li > a{
+        text-decoration: none;
+        transition: border-bottom .5s linear;
+        color: black;
+        padding: .5rem 1rem;
+        border-bottom: 2px solid transparent;
+    }
+    
+    nav > ul > li > a:hover{
+        border-bottom: 2px solid #286f6c;
+    }
+} 
