--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,7 @@ html{
  }
  
  *{
+    font-family: 'Inter', sans-serif;
      box-sizing: inherit;
      padding: 0;
      margin: 0;
@@ -76,6 +77,7 @@ nav > ul > li > a:hover{
     border-bottom: 2px solid #286f6c;
 }
 
+
 .letras-home{
     color: #286f6c;
     font-weight: bold;
@@ -95,7 +97,7 @@ header > h1{
 }
 .circulo1{
     display: flex;
-        width: 450px;px;
+        width: 450px;
         height: 450px;
         border: 1px solid black;
         border-radius: 50%;
@@ -117,7 +119,7 @@ font-size: 20px;
 .circulo2,
 .circulo4{
     display: flex;
-    width: 370px;px;
+    width: 370px;
     height: 370px;
     border: 1px solid black;
     border-radius: 50%;
@@ -133,6 +135,34 @@ font-size: 20px;
     border-radius: 50%;
     background-color: #f26440;
     border-color: #f26440;
+}
+
+.años{
+    color: black;
+    font-weight: bolder;
+    font-size: 25px;
+}
+
+.contenedor-1{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.contenedor-2{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.contenedor-3{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+p{
+    font-size: smaller;
 }
 
 .fondo-verde{
