--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,14 +98,21 @@ header > h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 45px;
-    width: 45px;
+    height: 50px;
+    width: 50px;
     background-color: #f26440;
     border-radius: 50%;
     border-color: #ffffff;
     border-style: solid;
     border-width: 2px;
 }
+
+/*
+.imagen-chica{
+    size: ;
+}
+*/
+
 .circulo1{
     display: flex;
         width: 450px;
@@ -199,14 +206,54 @@ p{
     background-color:  #d4e1e2;
     border-color:  #d4e1e2;
 }
+.contenedor-4{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+    justify-content: space-around;
+}
 
-.logos-grandes{
-    height: 40px;
-    width: 40px;
+.contenedor-5{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+    justify-content: space-around;
+}
+
+
+/*
+.logos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
     background-color: #f26440;
     border-radius: 50%;
     border-color: #ffffff;
     border-style: solid;
+    border-width: 2px;
+}
+
+*/
+
+
+
+.logos-grandes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    width: 80px;
+    background-color: #f26440;
+    border-radius: 50%;
+    border-color: #ffffff;
+    border-style: solid;
+    border-width: 2px;
 }
 
 .titulos-verdes{
