--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,18 +1,18 @@
 
 
+:root{
+    --green-color: #286F6C;
+    --accent-color: #F26440;
+    --light-pink: #fef2f2;
+    --dark-color: #adadad;
+    --beige:#f9f5f2;
+}
 
-
-html{
-    /* font-family: 'Inter', sans-serif;
-     background-color: #ffffff;*/
-     box-sizing: border-box;
- }
- 
  *{
-     box-sizing: inherit;
+     box-sizing: border-box;
      padding: 0;
      margin: 0;
-     font-weight: regular;
+    /* font-weight: regular;*/
  }
  
  header{
