ultimos cambios martes 7 junio rama main

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,6 +204,10 @@ p{
     border-radius: 2%;
 }
 
+.fondo-fitness-2{
+    background-color: #ffffff;
+    border-radius: 2%;
+}
    
     
 .circulo4{
