--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,18 +82,29 @@ nav > ul > li > a:hover{
 
 .section-titulo{
     display: flex;
-    padding-left: 2%;
+    padding-left: 5%;
    font-size: 50px;
 }
 .section-header{
     display: flex;
-    justify-content: center;
+    /*justify-content: space-around;*/
+    padding-left: 5%;
 }
 
-.menu-hamburguesa > span{
+h2{
+    display: flex;
+    padding-left: 3%;
     color: var(--green-color);
-    font-weight: bold;
+    font-size: 40px;
+    font-weight: 600; 
 }
+.section-acerca > p{
+    display: flex;
+    padding-left: 5%;
+    color: var(--dark-color);
+    font-size: 24px;
+}
+
 
 .letras-home{
     color: var(--green-color);
@@ -111,8 +122,8 @@ nav > ul > li > a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
-    width: 50px;
+    height: 53px;
+    width: 53px;
     background-color: var(--accent-color);
     border-radius: 50%;
     border-color: #ffffff;
@@ -120,11 +131,9 @@ nav > ul > li > a:hover{
     border-width: 2px;
 }
 
-/*
-.imagen-chica{
-    size: ;
+.imagen-chica > img{
+width: 450px;
 }
-*/
 
 .circulo1{
     display: flex;
@@ -136,11 +145,10 @@ nav > ul > li > a:hover{
         border-color: var(--green-color);
 }
 
-body > h2{
-    color: var(--green-color);
-    font-size: 32px;
-    font-weight: 600; /*es el semibold*/
-}
+
+
+
+
 
 body > p{
 color: #adadad;
@@ -277,7 +285,7 @@ p{
 footer{
     color:var(--accent-color);
     text-align: center;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: normal;
 }
 
