--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,13 +177,24 @@ font-size: 20px;
     border-color: var(--accent-color);
 }
 
-.section-cuadros{
+.contenedor-habilidades{
     display: flex;
-    align-items: center;
-    text-align: center;
+    gap:1rem;
     padding: 2rem;
-    justify-content: space-around;
-   
+    justify-content: center;
+}
+
+.habilidades-card>img{
+    width: 35px;
+height: 35px;
+object-fit: contain;
+margin-bottom: .5rem;
+}
+
+.habilidades-card{
+    padding: 1.5rem 1rem;
+    background-color: var(--light-pink);
+    text-align: center;
 }
 
 .años{
