--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,12 +126,7 @@ h2{
 }
 
 
-/*
-.contenedor-logos{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}*/
+
 .logos{
     display: flex;
     justify-content: center;
@@ -166,8 +161,8 @@ width: 450px;
 
 
 body > p{
-color: #adadad;
-font-size: 20px;
+color: var(--dark-color);
+font-size: 16px;
 }
 
 .circulo2,
@@ -214,13 +209,13 @@ margin-bottom: .5rem;
 .años{
     color: black;
     font-weight: bolder;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .contenedor-1{
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: left;
     padding: 2rem;
     justify-content: space-around;
 }
@@ -228,7 +223,7 @@ margin-bottom: .5rem;
 .contenedor-2{
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: left;
     padding: 2rem;
     justify-content: space-around;
 }
@@ -236,7 +231,7 @@ margin-bottom: .5rem;
 .contenedor-3{
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: left;
     padding: 2rem;
     justify-content: space-around;
 }
@@ -317,15 +312,15 @@ p{
 }
 
 .letras-grises{
-    font-size: 14px;
-    color: var(--dark-color)
+    font-size: 16px;
+    color: var(--dark-color);
+
 }
 
 .contenedor-contacto{
 display: flex;
 gap:1rem;
 padding: 2rem;
-justify-content: center;
 }
 
 
@@ -407,6 +402,10 @@ footer{
     .section-contacto{
         padding: 1rem 3rem;
     }
+
+    .section-acerca > p{
+        padding: 0 3rem;
+    }
    
 } 
 
@@ -418,6 +417,7 @@ footer{
         display: flex;
         flex-direction: row;
     }
+
 
     .logos{
         display: flex;
@@ -442,6 +442,11 @@ footer{
 }
 
 .section-acerca > p{
+    font-size: 24px;
+    padding: 0 3rem;
+}
+
+.años{
     font-size: 24px;
 }
 
