--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,10 +188,15 @@ font-size: 16px;
 
 .contenedor-habilidades{
     display: flex;
+    align-items: center;
     gap:1rem;
+    justify-content: space-between;
+    max-width: 100vw;
+    overflow-x: scroll;
     padding: 2rem;
     justify-content: center;
 }
+
 
 .habilidades-card>img{
     width: 35px;
@@ -201,9 +206,11 @@ margin-bottom: .5rem;
 }
 
 .habilidades-card{
+    width:200px;
     padding: 1.5rem 1rem;
     background-color: var(--light-pink);
     text-align: center;
+    min-width: 220px;
 }
 
 .años{
