--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,12 +211,17 @@ margin-bottom: .5rem;
     background-color: var(--light-pink);
     text-align: center;
     min-width: 220px;
+    text-align: left;
 }
 
 .años{
     color: black;
     font-weight: bolder;
     font-size: 20px;
+}
+.parrafo{
+    display: flex;
+    flex-direction: row;
 }
 
 .contenedor-1{
