--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,9 +165,9 @@ color: var(--dark-color);
 font-size: 16px;
 }
 
-.circulo2,
-.circulo4{
-    display: flex;
+.circulo2{
+    display:flex;
+    position: relative;
     width: 370px;
     height: 370px;
     border: 1px solid black;
@@ -176,8 +176,19 @@ font-size: 16px;
     border-color: var(--green-color);
 }
 
+.circulo4{
+    display:flex;
+    position: relative;
+    width: 370px;
+    height: 370px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-color: var(--green-color);
+    border-color: var(--green-color);
+}
 .circulo3{
     display: flex;
+    position: absolute;
     width: 180px;
     height: 180px;
     border: 1px solid black;
@@ -188,15 +199,13 @@ font-size: 16px;
 
 .contenedor-habilidades{
     display: flex;
+    justify-content: center;
     align-items: center;
     gap:1rem;
-    justify-content: space-between;
     max-width: 100vw;
     overflow-x: scroll;
     padding: 2rem;
-    justify-content: center;
 }
-
 
 .habilidades-card>img{
     width: 35px;
@@ -411,6 +420,11 @@ footer{
     .section{
         padding: 1rem 7rem;
     }  
+
+    .contenedor-habilidades{
+        display: flex;
+        justify-content: flex-end;
+    }
 
 
     .section-experiencia{
