--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -284,6 +284,7 @@ p{
     background-color: #ffffff;
     border-radius: 2%;
     max-width: fit-content;
+    box-shadow: 1px 10px 10px 8px rgba(0,0,0,0.5);
 }
 
 .imagen-fitness{
@@ -304,6 +305,7 @@ p{
     background-color: #ffffff;
     border-radius: 2%;
     max-width: fit-content;
+    box-shadow: 8px 10px 10px 1px rgba(0,0,0,0.5);
 }
 
 .letra-caja-fitness{
